# rms-nextjs-django-postgres

./: .env.production  RESULT_MODULE_REDESIGN.md  design.tldr  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  schema.py
backend/academics/: models.py
backend/academics/api/: config_views.py  serializers.py  urls.py  views.py
backend/academics/migrations/: 0001_initial.py  0002_initial.py  0003_term_assessmenttype_term.py  0004_marksdistribution.py  0005_subjectcategory_remove_subject_default_full_marks_and_more.py  0006_alter_marksdistribution_options_and_more.py
backend/academics/repositories/: assignment_repository.py  subject_repository.py
backend/academics/selectors/: subject_selector.py
backend/academics/services/: assessment_service.py  assignment_service.py  class_service.py  grading_service.py  subject_service.py
backend/analytics/services/: analytics_service.py
backend/attendance/: models.py
backend/attendance/api/: serializers.py  urls.py  views.py
backend/attendance/migrations/: 0001_initial.py  0002_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py
backend/core/: models.py  models_audit.py  permissions.py
backend/core/api/: audit_views.py  dashboard_views.py  views.py
backend/core/migrations/: 0001_initial.py  (+2 more)
backend/enrollments/: models.py
backend/reporting/: types.py
backend/results/: models.py
backend/shared/: base_model.py  types.py
(+118 files in other folders)
