[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=23.1.0",
    "django>=6.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=23.5",
    "django-ninja>=1.0.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "gunicorn>=21.2.0",
    "ipython>=8.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-core>=2.46.4",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "whitenoise>=6.6.0",
]
